--- a/popup.html
+++ b/popup.html
@@ -49,7 +49,7 @@
 </head>
 
 <body>
-  <div id="newItem" class="gray">添加新项</div>
+  <div id="newItem" class="gray" style="width: 20px">添加新项</div>
   <div id="addDiv" class="hide"><input type="text" id="txtTitle" /></div>
   <div id="taskItemList">
     <div class="taskItem">
