--- a/first_self/popup.html
+++ b/first_self/popup.html
@@ -10,6 +10,10 @@
 
 <body>
 
+  <!--
+    不能调用js代码和方法
+    <div id="click" style="width: 110px" onclick="alert('ok')">别点我</div>
+  -->
   <div id="click" style="width: 110px">别点我</div>
 </body>
 
